--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
 	<title>MétEX, the Paris Métro Experience</title>
 	<base href="/">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="manifest" href="manifest.webmanifest">
 	<link rel="icon" type="image/png" sizes="196x196" href="assets/icons/favicon-196.png">
 	<link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-icon-180.png">
 	<link rel="apple-touch-icon" sizes="167x167" href="assets/icons/apple-icon-167.png">
